Added link to 3D Dungeong FPS asset pack on itch.io.

--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
         <p>
           This was a 3D Gauntlet-style game I was working on that the project seems to have been lost to time. I had a character select screen and a single level that you could play through complete with pickup items, unlockable doors, destroyable walls, items to pick up, enemies, and an exit. Unfortunately, these are the only two pictures of it I can find at the moment.
         </p>
+        <br />
+        <p>
+            <b>UPDATE:</b>&nbsp;I have found the project files and put the models up under the public domain at <a href="https://8bitprodigy.itch.io/public-domain-dungeon-themed-models">Itch.io</a>!
+        </p>
       <hr class="sep"/>
         <h3>
           <a href="">
