--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Christopher DeBoy</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta property="og:title" content="Christopher DeBoy">
@@ -13,11 +14,8 @@
     <script src="scripts.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="content">
-      <!--<h1 id="header">
-        Christopher DeBoy
-      </h1>-->
-      <div id="header_img"></div>
+    <main>
+      <img src="/img/name.svg" alt="Christopher DeBoy" />
       <hr/>
       <p>
         My name is Christopher DeBoy, and I'm an aspiring game developer and graphic designer/artist. I'm most familiar with the Godot Game Engine and its GDScript scripting language, having worked with it for over 8 years and developed quite a few comprehensive systems in it. <b>If you're interested in hiring me, <a href="#contact">feel free to reach out</a></b>
@@ -88,10 +86,12 @@
         </li>
       </ul>
       <hr/>
-      <h2 id="contact">
-        Contact
-      </h2>
-      <div id="contact_info"></div>
+      <div id="contact">
+        <h2>
+          Contact
+        </h2>
+        <img src="/img/contact.svg" />
+      </div>
       <hr/>
       <h2 id="programming">
         Programming
@@ -102,7 +102,7 @@
             Godot FPS Controller
           </a>
         </h3>
-        <video id="fps_controller"  width="720px" controls>
+        <video id="fps_controller" controls>
           <source src="videos/fps_controller_1.mp4" type="video/mp4" />
         </video>
         <center>
@@ -137,7 +137,7 @@
             Mech Controller Demo
           </a>
         </h3>
-        <video width="720px" controls>
+        <video controls>
           <source src="videos/mech_controller.mp4" type="video/mp4" />
         </video>
         <p>
@@ -156,7 +156,7 @@
             6DOF Controller Demo
           </a>
         </h3>
-        <video id="6dof_controller" width="720px" controls>
+        <video id="6dof_controller" controls>
           <source src="videos/6dof_demo_1.mp4" type="video/mp4" />
         </video>
         <center>
@@ -168,7 +168,7 @@
             Demo 2
           </a>
         </center>
-        <!--video width="720px" controls>
+        <!--video controls>
           <source src="videos/6dof_demo_2.mp4" type="video/mp4" />
         </video-->
         <p>
@@ -278,7 +278,7 @@
             GameBoy Color DVD Screensaver demo
           </a>
         </h3>
-        <video width="720px" controls>
+        <video controls>
           <source src="videos/gb_dvd_screensaver.mp4" type="video/mp4" />
         </video>
         <p>
@@ -290,7 +290,7 @@
             GameBoy Roguelike
           </a>
         </h3>
-        <video width="720px" controls>
+        <video controls>
           <source src="videos/gb_roguelike.mp4" type="video/mp4" />
         </video>
         <p>
@@ -402,7 +402,7 @@
       <h3>
         The New Retro Show intro
       </h3>
-      <video id="tnrs_intro"  width="720px" controls>
+      <video id="tnrs_intro" controls>
         <source src="videos/newretro.mp4" type="video/mp4" />
       </video>
       <p>
@@ -412,7 +412,7 @@
       <h3>
         Metal Jesus Rocks intro
       </h3>
-      <video id="mjr_intro"  width="720px" controls>
+      <video id="mjr_intro" controls>
         <source src="videos/mjr_intro.mp4" type="video/mp4" />
       </video>
       <p>
@@ -630,6 +630,6 @@
         <p>
         In addition to the above logos, all other logos on this page were designed by myself.
         </p>
-    </div>
+      </main>
   </body>
 </html>
