--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <p>
           This is a first person shooter controller I made in the Godot engine. I got pretty far along and it includes the following features:
           <ul>
-            <li>Walking, stair-stepping, crouching, leaning, sprinting, sneaking, jumping, Source Engine-style ladder Sclimbing, and swimming</li>
+            <li>Walking, stair-stepping, crouching, leaning, sprinting, sneaking, jumping, Source Engine-style ladder climbing, and swimming</li>
             <li>Head-bobbing dependent upon speed and ambulation type</li>
             <li>Procedural weapon sway, bobbing, and inertia</li>
-            <li>Weapons have procedural vertical and horizongal muzzle climb, recoil, accuracy, and precision settings.</li>
+            <li>Weapons have procedural vertical and horizontal muzzle climb, recoil, accuracy, and precision settings.</li>
             <li>Bullet spread can be affected by how long you fire. If the barrel overheats, that could permanently affect accuracy and precision.</li>
             <li>Bullets are projectiles that travel through space over time and are affected by gravity. Their trajectory is determined when they're fired.</li>
             <li>Bullets leave material-dependent decals on impact -- wood splinters, metal dents, glass cracks, dirt craters, etc...</li>
@@ -330,8 +330,7 @@
           This is the Atlas Window Manager. AtlasWM aims to be a lightweight, but featureful, and user-friendly window manager for X11, based on Joe's Window Manager (JWM), that only uses permissively-licensed code and libraries, as it will be the default window manager for AcephalOS and eventually PrometheusOS.
           <br/>
           <br/>
-          Currently, I've replaced Cairo/libRSVG with <a href="https://github.com/sammycage/plutosvg" alt="Link to the PlutoSVG Github repo.">PlugoSVG</a>, and have enhanced the customizability of the motif theme to enable greater readability, and am currently working on replacing Pango/XFT with <a href="https://github.com/tomolt/libschrift" alt="Link to the libSchrift Github repo.">libSchrift</a>. I intend to extend its features, with some of the main ones being tababble w      left: 50%;
-      transform: translate(-50%, 0%);indows, like in Haiku or FluxBox, and a global menu panel item.
+          Currently, I've replaced Cairo/libRSVG with <a href="https://github.com/sammycage/plutosvg" alt="Link to the PlutoSVG Github repo.">PlutoSVG</a>, and have enhanced the customizability of the motif theme to enable greater readability, and am currently working on replacing Pango/XFT with <a href="https://github.com/tomolt/libschrift" alt="Link to the libSchrift Github repo.">libSchrift</a>. I intend to extend its features, with some of the main ones being tababble windows, like in Haiku or FluxBox, and a global menu panel item.
           <br/>
           <br/>
           AtlasWM is currently in alpha stages, and most planned features are not yet implemented. Many things are likely subject to change, so it is not recommended for daily use.
