--- a/~index.html
+++ b/~index.html
@@ -35,6 +35,11 @@
       </p>
       <ul>
         <li>
+          <a href="https://www.linkedin.com/in/christopher-deboy-0aa48278/">
+            LinkedIn
+          </a>
+        </li>
+        <li>
           <a href="https://github.com/8bitprodigy">
             Github Profile
           </a>
@@ -52,11 +57,6 @@
         <li>
           <a href="https://8bitprodigy.itch.io/">
             Itch.io
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/8bitProdigy">
-            Twitter/X
           </a>
         </li>
       </ul>
