Hopefully fixed header links

--- a/index.htm
+++ b/index.htm
@@ -34,10 +34,10 @@ Christopher DeBoy's Portfolio
 </ul>
 <p><strong>Portfolio Sections:</strong></p>
 <ul>
-<li><a href="https://8bitprodigy.github.io/#contact">Contact info</a></li>
-<li><a href="https://8bitprodigy.github.io/#programming">Programming</a></li>
-<li><a href="https://8bitprodigy.github.io/#3d_art_animation">3D Art &amp; Animation</a></li>
-<li><a href="https://8bitprodigy.github.io/#graphic_design">Graphic Design</a></li>
+<li><a href="#contact">Contact info</a></li>
+<li><a href="#programming">Programming</a></li>
+<li><a href="#3d_art_animation">3D Art &amp; Animation</a></li>
+<li><a href="#graphic_design">Graphic Design</a></li>
 </ul>
 <hr />
 <h2>Contact {#contact}</h2>
@@ -109,7 +109,7 @@ Christopher DeBoy's Portfolio
 <li>Skybox</li>
 </ul>
 <hr />
-<h3>[RZZNNV2N](<a href="https://8bitprodigy.itch.io/rzznnv2n">RZZNNV2N by 8bitprodigy</a>)</h3>
+<h3><a href="https://8bitprodigy.itch.io/rzznnv2n">RZZNNV2N</a></h3>
 <p><img src="img/RZZNNV2N.jpg" alt="RZZNNV2N.jpg" /></p>
 <p>This is a simple challenge game I made, where you navigate a helicopter through a gauntlet of challenges, increasing in difficulty with each level. Made in Godot 2.X, it was a sequel to my prior game, <a href="https://8bitprodigy.itch.io/rzznnvzn">RZZNNVZN</a>, which was made in JavaScript using <a href="https://melonjs.org/">MelonJS</a>.</p>
 <hr />
