--- a/index.htm
+++ b/index.htm
@@ -36,14 +36,14 @@ Christopher DeBoy's Portfolio
 <ul>
 <li><a href="#contact">Contact info</a></li>
 <li><a href="#programming">Programming</a></li>
-<li><a href="#3d_art_animation">3D Art &amp; Animation</a></li>
-<li><a href="#graphic_design">Graphic Design</a></li>
+<li><a href="#3d-art-&-animation">3D Art &amp; Animation</a></li>
+<li><a href="#graphic-design">Graphic Design</a></li>
 </ul>
 <hr />
-<h2>Contact {#contact}</h2>
+<h2>Contact</h2>
 <p><img src="img/contact.svg" alt="contact.svg" /></p>
 <hr />
-<h1>Programming {#programming}</h1>
+<h1>Programming</h1>
 <hr />
 <h3><a href="https://github.com/8bitprodigy/WestMonster_FPS_Base">Godot FPS Controller</a></h3>
 <video id="fps_controller" controls>
@@ -201,7 +201,7 @@ Christopher DeBoy's Portfolio
 <p>Currently, I've replaced Cairo/libRSVG with <a href="https://github.com/sammycage/plutosvg">PlutoSVG</a>, and have enhanced the customizability of the motif theme to enable greater readability, and am currently working on replacing Pango/XFT with <a href="https://github.com/tomolt/libschrift">libSchrift</a>. I intend to extend its features, with some of the main ones being tababble windows, like in Haiku or FluxBox, and a global menu panel item.</p>
 <p>AtlasWM is currently in alpha stages, and most planned features are not yet implemented. Many things are likely subject to change, so it is not recommended for daily use.</p>
 <hr />
-<h2>3D Art &amp; Animation {#3d_art_animation}</h2>
+<h2>3D Art &amp; Animation</h2>
 <p>Some 3D models I've worked on, some of which are animated. This is an incomplete list.</p>
 <hr />
 <h3>Glock 17</h3>
@@ -430,7 +430,7 @@ Christopher DeBoy's Portfolio
 </center>
 <p>Various retro/synthwave desktop wallpapers I've created in Blender3D.</p>
 <hr />
-<h1>Graphic Design {#graphic_design}</h1>
+<h1>Graphic Design</h1>
 <hr />
 <h3><a href="https://github.com/8bitprodigy/liver">Liver</a></h3>
 <p><img src="img/liver.svg" alt="liver.svg" /></p>
