Updated `nerc` to automatically insert GFM style header id slugs.

--- a/index.htm
+++ b/index.htm
@@ -40,12 +40,12 @@ Christopher DeBoy's Portfolio
 <li><a href="#graphic-design">Graphic Design</a></li>
 </ul>
 <hr />
-<h1 id="contact">Contact</h1>
+<h1 id="contact"><a href="#contact" class="anchor" aria-hidden="true">🔗</a>Contact</h1>
 <p><img src="img/contact.svg" alt="contact.svg" /></p>
 <hr />
-<h1 id="programming">Programming</h1>
+<h1 id="programming"><a href="#programming" class="anchor" aria-hidden="true">🔗</a>Programming</h1>
 <hr />
-<h3><a href="https://github.com/8bitprodigy/WestMonster_FPS_Base">Godot FPS Controller</a></h3>
+<h3 id="a-href-https-github-com-8bitprodigy-westmonster-fps-base-godot-fps-controller-a"><a href="#a-href-https-github-com-8bitprodigy-westmonster-fps-base-godot-fps-controller-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/WestMonster_FPS_Base">Godot FPS Controller</a></h3>
 <video id="fps_controller" controls>
         <source src="videos/fps_controller_1.mp4" type="video/mp4" />
 </video>
@@ -74,7 +74,7 @@ Christopher DeBoy's Portfolio
 <li>Buttons, dials, doors, and gates are available as interactable elements and can have their inputs and outputs chained together like in the Source Engine.</li>
 </ul>
 <hr />
-<h3><a href="https://github.com/8bitprodigy/mech_demo">Mech Controller Demo</a></h3>
+<h3 id="a-href-https-github-com-8bitprodigy-mech-demo-mech-controller-demo-a"><a href="#a-href-https-github-com-8bitprodigy-mech-demo-mech-controller-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/mech_demo">Mech Controller Demo</a></h3>
 <video controls>
         <source src="videos/mech_controller.mp4" type="video/mp4" />
 </video>
@@ -87,7 +87,7 @@ Christopher DeBoy's Portfolio
 <li>Skybox and endless plane visualizer</li>
 </ul>
 <hr />
-<h3><a href="https://github.com/8bitprodigy/6DOF_Demo">6DOF Controller Demo</a></h3>
+<h3 id="a-href-https-github-com-8bitprodigy-6dof-demo-6dof-controller-demo-a"><a href="#a-href-https-github-com-8bitprodigy-6dof-demo-6dof-controller-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/6DOF_Demo">6DOF Controller Demo</a></h3>
 <video id="6dof_controller" controls>
         <source src="videos/6dof_demo_1.mp4" type="video/mp4" />
 </video>
@@ -109,11 +109,11 @@ Christopher DeBoy's Portfolio
 <li>Skybox</li>
 </ul>
 <hr />
-<h3><a href="https://8bitprodigy.itch.io/rzznnv2n">RZZNNV2N</a></h3>
+<h3 id="a-href-https-8bitprodigy-itch-io-rzznnv2n-rzznnv2n-a"><a href="#a-href-https-8bitprodigy-itch-io-rzznnv2n-rzznnv2n-a" class="anchor" aria-hidden="true">🔗</a><a href="https://8bitprodigy.itch.io/rzznnv2n">RZZNNV2N</a></h3>
 <p><img src="img/RZZNNV2N.jpg" alt="RZZNNV2N.jpg" /></p>
 <p>This is a simple challenge game I made, where you navigate a helicopter through a gauntlet of challenges, increasing in difficulty with each level. Made in Godot 2.X, it was a sequel to my prior game, <a href="https://8bitprodigy.itch.io/rzznnvzn">RZZNNVZN</a>, which was made in JavaScript using <a href="https://melonjs.org/">MelonJS</a>.</p>
 <hr />
-<h3>Magical Girl FPS</h3>
+<h3 id="magical-girl-fps"><a href="#magical-girl-fps" class="anchor" aria-hidden="true">🔗</a>Magical Girl FPS</h3>
 <img id="MGIRL" src="3d/magical_girl.jpg" />
 <center>
         <a id="mgirl_0" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl.jpg')">
@@ -150,7 +150,7 @@ Christopher DeBoy's Portfolio
 <li><strong>Dive</strong> - accelerate for a short burst in the direction you're moving</li>
 </ul>
 <hr />
-<h3>3D Gauntlet-like</h3>
+<h3 id="3d-gauntlet-like"><a href="#3d-gauntlet-like" class="anchor" aria-hidden="true">🔗</a>3D Gauntlet-like</h3>
 <img id="GAUNT" src="3d/3d_gauntlet_wiz_skelly.jpg" />
 <center>
         <a id="gaunt_0" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_wiz_skelly.jpg')">
@@ -173,24 +173,24 @@ Christopher DeBoy's Portfolio
 <p>This was a 3D Gauntlet-style game I was working on that the project seems to have been lost to time. I had a character select screen and a single level that you could play through complete with pickup items, unlockable doors, destroyable walls, items to pick up, enemies, and an exit. Unfortunately, these are the only two pictures of it I can find at the moment.</p>
 <p><strong>UPDATE:</strong> I have found the project files and put the models up under the public domain at <a href="https://8bitprodigy.itch.io/public-domain-dungeon-themed-models">Itch.io</a>!</p>
 <hr />
-<h3><a href="https://8bitprodigy.github.io/">GameBoy Color DVD Screensaver demo###</a></h3>
+<h3 id="a-href-https-8bitprodigy-github-io-gameboy-color-dvd-screensaver-demo-a"><a href="#a-href-https-8bitprodigy-github-io-gameboy-color-dvd-screensaver-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://8bitprodigy.github.io/">GameBoy Color DVD Screensaver demo###</a></h3>
 <video controls>
         <source src="videos/gb_dvd_screensaver.mp4" type="video/mp4" />
 </video>
 <p>This is a simple demo I made using GBDK to get familiar with the library. It features a DVD Video logo as a metasprite that bounces around the screen and changes color on collision.</p>
 <hr />
-<h3><a href="https://codeberg.org/chris_deboy/GameBoy_Roguelike">GameBoy Roguelike</a></h3>
+<h3 id="a-href-https-codeberg-org-chris-deboy-gameboy-roguelike-gameboy-roguelike-a"><a href="#a-href-https-codeberg-org-chris-deboy-gameboy-roguelike-gameboy-roguelike-a" class="anchor" aria-hidden="true">🔗</a><a href="https://codeberg.org/chris_deboy/GameBoy_Roguelike">GameBoy Roguelike</a></h3>
 <video controls>
         <source src="videos/gb_roguelike.mp4" type="video/mp4" />
 </video>
 <p>This is a work-in-progress roguelike I've been working on for the GameBoy in C and GBDK. It's pretty early on, but the basic skeleton of dungeon generation is implemented.</p>
 <hr />
-<h3><a href="https://github.com/8bitprodigy/nrpnc">NRPNC</a></h3>
+<h3 id="a-href-https-github-com-8bitprodigy-nrpnc-nrpnc-a"><a href="#a-href-https-github-com-8bitprodigy-nrpnc-nrpnc-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/nrpnc">NRPNC</a></h3>
 <p><img src="img/nrpnc.svg" alt="nrpnc.svg" /></p>
 <p><img src="img/nrpnc_screenshot.png" alt="nrpnc_screenshot.png" /></p>
 <p>This is an RPN (Reverse Polish Notation) calculator in Nim. It operates with a stack-based language with if/else statements, variables, and function declaration, which should, in theory, make it turing-complete.</p>
 <hr />
-<h3><a href="https://github.com/8bitprodigy/nute">N.U.T.E.</a></h3>
+<h3 id="a-href-https-github-com-8bitprodigy-nute-n-u-t-e-a"><a href="#a-href-https-github-com-8bitprodigy-nute-n-u-t-e-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/nute">N.U.T.E.</a></h3>
 <p><img src="img/nute_screenshot.png" alt="nute_screenshot.png" /></p>
 <p>The Nim Unstructured/Useless Text Editor. This is a line text editor I made as an exercise to learn Nim and make use of its built in types. It stores a document line by line in an AVL tree, and it makes editing the text document much like entering a program into an 80's microcomputer. To enter text, you type the number for its line, followed by a space, and then the text you wish to enter. If there's a line number collision, it replaces the old line, but if not, it's entered into the AVL tree, which then self-balances.</p>
 <hr />
@@ -201,10 +201,10 @@ Christopher DeBoy's Portfolio
 <p>Currently, I've replaced Cairo/libRSVG with <a href="https://github.com/sammycage/plutosvg">PlutoSVG</a>, and have enhanced the customizability of the motif theme to enable greater readability, and am currently working on replacing Pango/XFT with <a href="https://github.com/tomolt/libschrift">libSchrift</a>. I intend to extend its features, with some of the main ones being tababble windows, like in Haiku or FluxBox, and a global menu panel item.</p>
 <p>AtlasWM is currently in alpha stages, and most planned features are not yet implemented. Many things are likely subject to change, so it is not recommended for daily use.</p>
 <hr />
-<h2 id="3d-art-&-animation">3D Art &amp; Animation</h2>
+<h2 id="3d-art-amp-animation"><a href="#3d-art-amp-animation" class="anchor" aria-hidden="true">🔗</a>3D Art &amp; Animation</h2>
 <p>Some 3D models I've worked on, some of which are animated. This is an incomplete list.</p>
 <hr />
-<h3>Glock 17</h3>
+<h3 id="glock-17"><a href="#glock-17" class="anchor" aria-hidden="true">🔗</a>Glock 17</h3>
 <img id="GLOCK" src="3d/glock/3qfl.png" alt="Rigged Glock 17 3D model I was working on in Blender, texture made in Inkscape and GIMP." />
 <center>
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qfl.png')">
@@ -257,19 +257,19 @@ Christopher DeBoy's Portfolio
 </center>
 <p>Rigged Glock 17 3D model I was working on in Blender, texture made in Inkscape and GIMP.</p>
 <hr />
-<h3>The New Retro Show intro</h3>
+<h3 id="the-new-retro-show-intro"><a href="#the-new-retro-show-intro" class="anchor" aria-hidden="true">🔗</a>The New Retro Show intro</h3>
 <video id="tnrs_intro" controls>
         <source src="videos/newretro.mp4" type="video/mp4" />
 </video>
 <p>Intro sequence I made for the YouTube channel <a href="https://www.youtube.com/@thenewretroshow">The New Retro Show</a>.</p>
 <hr />
-<h3>Metal Jesus Rocks intro</h3>
+<h3 id="metal-jesus-rocks-intro"><a href="#metal-jesus-rocks-intro" class="anchor" aria-hidden="true">🔗</a>Metal Jesus Rocks intro</h3>
 <video id="mjr_intro" controls>
         <source src="videos/mjr_intro.mp4" type="video/mp4" />
 </video>
 <p>An intro sequence I made for the YouTube channel <a href="https://www.youtube.com/@MetalJesusRocks/">MetalJesusRocks</a>. Unfortunately, I do not recall the video it was used in.</p>
 <hr />
-<h3>Arm Cannon</h3>
+<h3 id="arm-cannon"><a href="#arm-cannon" class="anchor" aria-hidden="true">🔗</a>Arm Cannon</h3>
 <img id="SAMUS" src="3d/arm_cannon/animations.gif" alt="Samus Aran arm cannon I made for a Quake Mod I was working on." />
 <center>
         <a id="samus_1" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/animations.gif')">
@@ -326,7 +326,7 @@ Christopher DeBoy's Portfolio
 </center>
 <p>Samus Aran arm cannon I made for a Quake Mod I was working on. Made using forward kinematics.</p>
 <hr />
-<h3>Robot</h3>
+<h3 id="robot"><a href="#robot" class="anchor" aria-hidden="true">🔗</a>Robot</h3>
 <img id="ROBOT" src="3d/ROBOT_ANIM_C0.gif" alt="A robot model I created, inspired by some outdoor security cameras I saw around town." />
 <center>
         <a id="robot_1" href="#ROBOT" onclick="changeImgSrc('ROBOT', '3d/ROBOT_ANIM_C0.gif')">
@@ -343,7 +343,7 @@ Christopher DeBoy's Portfolio
 </center>
 <p>A robot model I created, inspired by some outdoor security cameras I saw around my hometown. Makes uses of Forward and Inverse kinematics.</p>
 <hr />
-<h3>Star Raiders</h3>
+<h3 id="star-raiders"><a href="#star-raiders" class="anchor" aria-hidden="true">🔗</a>Star Raiders</h3>
 <img id="STAR" src="3d/MechWalk1.gif" alt="A mech model I made for a game a friend of mine and I had started." />
 <center>
         <a id="star_1" href="#STAR" onclick="changeImgSrc('STAR', '3d/MechWalk1.gif')">
@@ -376,7 +376,7 @@ Christopher DeBoy's Portfolio
 </center>
 <p>Various models I made for a game I was working on with a friend called &quot;Star Raiders&quot;(Working title). Animated using forward kinematics.</p>
 <hr />
-<h3>Various Guns</h3>
+<h3 id="various-guns"><a href="#various-guns" class="anchor" aria-hidden="true">🔗</a>Various Guns</h3>
 <img id="GUNS" src="3d/muziSnapTex.png" alt="A low-poly, stylized Micro-Uzi model I had created." />
 <center>
         <a id="guns_1" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/muziSnapTex.png')">
@@ -409,7 +409,7 @@ Christopher DeBoy's Portfolio
 </center>
 <p>Various low-poly, stylized weapon models I have created over the years.</p>
 <hr />
-<h3>Wallpapers</h3>
+<h3 id="wallpapers"><a href="#wallpapers" class="anchor" aria-hidden="true">🔗</a>Wallpapers</h3>
 <img id="WALLPAPER" src="3d/goreEffectHD_glow.png" alt="Various retro/synthwave desktop wallpapers I've created in Blender3D." />
 <center>
         <a id="wallpaper_1" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/goreEffectHD_glow.png')">
@@ -430,26 +430,26 @@ Christopher DeBoy's Portfolio
 </center>
 <p>Various retro/synthwave desktop wallpapers I've created in Blender3D.</p>
 <hr />
-<h1 id="graphic-design">Graphic Design</h1>
+<h1 id="graphic-design"><a href="#graphic-design" class="anchor" aria-hidden="true">🔗</a>Graphic Design</h1>
 <hr />
-<h3><a href="https://github.com/8bitprodigy/liver">Liver</a></h3>
+<h3 id="a-href-https-github-com-8bitprodigy-liver-liver-a"><a href="#a-href-https-github-com-8bitprodigy-liver-liver-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/liver">Liver</a></h3>
 <p><img src="img/liver.svg" alt="liver.svg" /></p>
 <p>This is the typeface used throughout this document. Liver is a public-domain sans-serif font in the style of Goma/Shin-Go/Rodin/Saira, modeled with screens in mind.</p>
 <p>Comes in regular and mono variants. Bold variant in the works.</p>
 <hr />
-<h2>Logos</h2>
+<h2 id="logos"><a href="#logos" class="anchor" aria-hidden="true">🔗</a>Logos</h2>
 <p><img src="img/AcephalOS_logo.png" alt="AcephalOS_logo.png" /></p>
-<h4>AcephalOS logo</h4>
+<h4 id="acephalos-logo"><a href="#acephalos-logo" class="anchor" aria-hidden="true">🔗</a>AcephalOS logo</h4>
 <p>Logo I made for a FreeBSD-based OS I am working on.</p>
 <p><img src="img/san_bernardino_operation.png" alt="san_bernardino_operation.png" /></p>
-<h4>San Bernardino Operation logo</h4>
+<h4 id="san-bernardino-operation-logo"><a href="#san-bernardino-operation-logo" class="anchor" aria-hidden="true">🔗</a>San Bernardino Operation logo</h4>
 <p>Logo I made for the organization to work on AcephalOS.</p>
 <p><img src="img/iortcw.png" alt="iortcw.png" /></p>
-<h4>ioRTCW</h4>
+<h4 id="iortcw"><a href="#iortcw" class="anchor" aria-hidden="true">🔗</a>ioRTCW</h4>
 <p><img src="img/Newioq3.png" alt="Newioq3.png" /></p>
-<h4>Old ioQuake3 logo</h4>
+<h4 id="old-ioquake3-logo"><a href="#old-ioquake3-logo" class="anchor" aria-hidden="true">🔗</a>Old ioQuake3 logo</h4>
 <p><img src="img/logoFinal2.png" alt="logoFinal2.png" /></p>
-<h4>The Gore Effect Facebook logo</h4>
+<h4 id="the-gore-effect-facebook-logo"><a href="#the-gore-effect-facebook-logo" class="anchor" aria-hidden="true">🔗</a>The Gore Effect Facebook logo</h4>
 <p>In addition to the above logos, all other logos on this page were designed by myself.</p>
 
         </div>
