--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@ Christopher DeBoy's Portfolio
 <ul>
 <li><a href="#contact">Contact info</a></li>
 <li><a href="#programming">Programming</a></li>
-<li><a href="#3d-art-&-animation">3D Art &amp; Animation</a></li>
+<li><a href="#3d-art-amp-animation">3D Art &amp; Animation</a></li>
 <li><a href="#graphic-design">Graphic Design</a></li>
 </ul>
 <hr />
