Updated a little bit of the wording

--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,7 @@ Christopher DeBoy's Portfolio
                 Demo 3
         </a>
 </center>
-<p>This is a first person shooter controller I made in the Godot engine. I got pretty far along and it includes the following features:</p>
+<p>This is a first person shooter controller I made in the Godot engine. I'm quite proud of how it's turning out and it includes the following features:</p>
 <ul>
 <li>Walking, stair-stepping, crouching, leaning, sprinting, sneaking, jumping, Source Engine-style ladder climbing, and swimming</li>
 <li>Head-bobbing dependent upon speed and ambulation type</li>
