Added a couple sections.

--- a/index.htm
+++ b/index.htm
@@ -45,6 +45,32 @@ Christopher DeBoy's Portfolio
 <hr />
 <h1 id="programming"><a href="#programming" class="anchor" aria-hidden="true">🔗</a>Programming</h1>
 <hr />
+<h3 id="a-href-https-github-com-8bitprodigy-kolibri-engine-kolibri-engine-a"><a href="#a-href-https-github-com-8bitprodigy-kolibri-engine-kolibri-engine-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/kolibri_engine">Kolibri Engine</a></h3>
+<p>This is a minimalist 3D game engine I wrote in C using raylib, weighing in at under 3,000 lines of code.
+Its goals are education, hacking/modification, and lightweight but legitimate game development. By focusing only on the core essentials of what makes an engine, it stands apart from conventional engines that accumulate large feature sets.</p>
+<p>Currently it includes:</p>
+<ul>
+<li><code>Engine</code>: central loop management (run, pause, unpause, exit), coordinating all systems</li>
+<li><code>Head</code>: couples a render surface with a camera and event callbacks</li>
+<li><code>Entity system</code>: entities with behavior defined via callbacks</li>
+<li><code>Scene interface</code>: generic dependency-injection model for different scene types</li>
+<li><code>CollisionScene</code>: entity–entity collisions via spatial hashing</li>
+<li><code>Renderer</code>: frustum culling (sphere–frustum) and transparent object sorting</li>
+</ul>
+<p>Each public-facing system exposes vtables for plugging in custom behaviors. This makes the engine suitable both for simple games and as a foundation for building more complete, specialized engines.</p>
+<p>It's currently in alpha, but already demonstrates the core principles of game engine architecture in a compact, accessible way.</p>
+<hr />
+<h3 id="a-href-https-github-com-8bitprodigy-nerc-nerc-a"><a href="#a-href-https-github-com-8bitprodigy-nerc-nerc-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/nerc">NERC</a></h3>
+<p>NERC is a static site generator written in Nim — deliberately minimal, fast, and lightweight.
+Unlike traditional web frameworks that rely on heavy interpreted runtimes, NERC takes an anti-framework approach: it’s compiled, nimble, and designed to get out of your way.
+When run, it recursively scans the current directory, converts Markdown files into HTML, builds a navigation sidebar from the folder structure, and applies templates and styles inherited from parent directories.
+I use it to generate sites hosted on GitHub (including this portfolio, minus the sidebar), and it can also be run directly on a web server to regenerate pages automatically when content is updated.</p>
+<hr />
+<h3 id="a-href-https-github-com-8bitprodigy-face-off-face-off-a"><a href="#a-href-https-github-com-8bitprodigy-face-off-face-off-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/Face-Off">Face-Off!</a></h3>
+<p>Face-Off is a simple clone of FaceBall 2000/Midi Maze developed for the Sega Dreamcast and Linux using raylib, with future plans for ports to platforms such as the Nintendo 64 and Sony PSP.
+It is currently on hold while I focus on bringing the Kolibri Engine to a usable state, after which Face-Off will be transitioned to run on that engine.
+In the meantime, the project has already been a valuable prototype, teaching me a great deal about engine architecture and directly shaping Kolibri’s design.</p>
+<hr />
 <h3 id="a-href-https-github-com-8bitprodigy-westmonster-fps-base-godot-fps-controller-a"><a href="#a-href-https-github-com-8bitprodigy-westmonster-fps-base-godot-fps-controller-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/WestMonster_FPS_Base">Godot FPS Controller</a></h3>
 <video id="fps_controller" controls>
         <source src="videos/fps_controller_1.mp4" type="video/mp4" />
