--- a/index.htm
+++ b/index.htm
@@ -88,30 +88,16 @@ In the meantime, the project has already been a valuable prototype, teaching me 
                 Demo 3
         </a>
 </center>
-<p>This is a first person shooter controller I made in the Godot engine. I'm quite proud of how it's turning out and it includes the following features:</p>
+<p>This is a first-person shooter controller I built in the Godot engine. I’m proud of how it’s turning out — it already supports a wide range of movement and weapon systems:</p>
 <ul>
-<li>Walking, stair-stepping, crouching, leaning, sprinting, sneaking, jumping, Source Engine-style ladder climbing, and swimming</li>
-<li>Head-bobbing dependent upon speed and ambulation type</li>
-<li>Procedural weapon sway, bobbing, and inertia</li>
-<li>Weapons have procedural vertical and horizontal muzzle climb, recoil, accuracy, and precision settings.</li>
-<li>Bullet spread can be affected by how long you fire. If the barrel overheats, that could permanently affect accuracy and precision.</li>
-<li>Bullets are projectiles that travel through space over time and are affected by gravity. Their trajectory is determined when they're fired.</li>
-<li>Bullets leave material-dependent decals on impact -- wood splinters, metal dents, glass cracks, dirt craters, etc...</li>
-<li>Buttons, dials, doors, and gates are available as interactable elements and can have their inputs and outputs chained together like in the Source Engine.</li>
+<li><strong>Player movement</strong>: walking, stair-stepping, crouching, leaning, sprinting, sneaking, jumping, swimming, and Source Engine–style ladder climbing</li>
+<li><strong>Camera feel</strong>: speed-dependent head-bobbing</li>
+<li><strong>Weapons</strong>: procedural sway, bobbing, and inertia; vertical/horizontal recoil; customizable accuracy and precision</li>
+<li><strong>Ballistics</strong>: projectiles affected by gravity with trajectory fixed at fire time; accuracy affected by sustained fire and barrel overheating</li>
+<li><strong>Impact effects</strong>: material-specific decals (wood splinters, metal dents, glass cracks, dirt craters, etc.)</li>
+<li><strong>Interaction system</strong>: buttons, dials, doors, and gates with chainable inputs/outputs, inspired by the Source Engine</li>
 </ul>
-<hr />
-<h3 id="a-href-https-github-com-8bitprodigy-mech-demo-mech-controller-demo-a"><a href="#a-href-https-github-com-8bitprodigy-mech-demo-mech-controller-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/mech_demo">Mech Controller Demo</a></h3>
-<video controls>
-        <source src="videos/mech_controller.mp4" type="video/mp4" />
-</video>
-<p>This is a mech controller demo I created in the Godot game engine. It is a minimal proof-of-concept and includes the following features:</p>
-<ul>
-<li>Tank reticle to show leg orientation relative to turret orientation</li>
-<li>Aiming is driven by mouse direction, rather than mapped directly to mouse movement.</li>
-<li>movement is relative to leg orientation. Legs are rotated by key inputs.</li>
-<li>Thrusters/jet pack</li>
-<li>Skybox and endless plane visualizer</li>
-</ul>
+<p>The goal is to capture the responsiveness and physicality of classic FPS mechanics while keeping the system highly extensible for new features.</p>
 <hr />
 <h3 id="a-href-https-github-com-8bitprodigy-6dof-demo-6dof-controller-demo-a"><a href="#a-href-https-github-com-8bitprodigy-6dof-demo-6dof-controller-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/6DOF_Demo">6DOF Controller Demo</a></h3>
 <video id="6dof_controller" controls>
@@ -126,14 +112,31 @@ In the meantime, the project has already been a valuable prototype, teaching me 
                 Demo 2
         </a>
 </center>
-<p>This is a six degrees of freedom (like in the Descent series) controller demo I created in the Godot game engine. It is a minimal proof-of-concept and includes the following features:</p>
+<p>A spaceflight controller inspired by the classic Descent series, demonstrating full 3D movement and rotation systems. This networked multiplayer prototype showcases advanced physics programming and real-time synchronization.</p>
+<p><strong>Features:</strong></p>
 <ul>
-<li>Six degrees of rotation</li>
-<li>Angular inertia</li>
-<li>Movement along all 3 axes relative to orientation</li>
-<li>Networked player controllers</li>
-<li>Skybox</li>
+<li><strong>Complete 6DOF Movement</strong>: Full rotation and translation along all three axes</li>
+<li><strong>Realistic Physics</strong>: Angular momentum and inertia modeling for authentic spaceflight feel</li>
+<li><strong>Orientation-Relative Controls</strong>: Movement directions based on ship orientation rather than world coordinates</li>
+<li><strong>Multiplayer Ready</strong>: Networked player controllers with real-time synchronization</li>
+<li><strong>Space Environment</strong>: Custom skybox for immersive testing</li>
 </ul>
+<p>Built in Godot using GDScript. This project demonstrates my experience with complex 3D physics systems and networked multiplayer implementation.</p>
+<hr />
+<h3 id="a-href-https-github-com-8bitprodigy-mech-demo-mech-controller-demo-a"><a href="#a-href-https-github-com-8bitprodigy-mech-demo-mech-controller-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/mech_demo">Mech Controller Demo</a></h3>
+<video controls>
+        <source src="videos/mech_controller.mp4" type="video/mp4" />
+</video>
+<p>A mech piloting simulation that demonstrates complex vehicle control systems. This prototype showcases realistic mech movement and combat mechanics.</p>
+<p><strong>Features:</strong></p>
+<ul>
+<li><strong>Independent Controls</strong>: Legs and turret rotate separately, with a tank-style reticle showing their relative positions</li>
+<li><strong>Rate-Limited Aiming</strong>: Turret rotation follows mouse movement direction with speed constraints, similar to Battlefield's vehicle aiming system</li>
+<li><strong>Authentic Movement</strong>: Walking direction follows leg orientation, not camera view, creating a genuine mech piloting feel</li>
+<li><strong>Jetpack System</strong>: Thruster-based flight mechanics for vertical mobility</li>
+<li><strong>Test Environment</strong>: Skybox and infinite ground plane for movement testing</li>
+</ul>
+<p>Built in Godot using GDScript. This project demonstrates my approach to creating alternative character controls and intuitive control schemes for complex mechanical systems.</p>
 <hr />
 <h3 id="a-href-https-8bitprodigy-itch-io-rzznnv2n-rzznnv2n-a"><a href="#a-href-https-8bitprodigy-itch-io-rzznnv2n-rzznnv2n-a" class="anchor" aria-hidden="true">🔗</a><a href="https://8bitprodigy.itch.io/rzznnv2n">RZZNNV2N</a></h3>
 <p><img src="img/RZZNNV2N.jpg" alt="RZZNNV2N.jpg" /></p>
@@ -199,18 +202,6 @@ In the meantime, the project has already been a valuable prototype, teaching me 
 <p>This was a 3D Gauntlet-style game I was working on that the project seems to have been lost to time. I had a character select screen and a single level that you could play through complete with pickup items, unlockable doors, destroyable walls, items to pick up, enemies, and an exit. Unfortunately, these are the only two pictures of it I can find at the moment.</p>
 <p><strong>UPDATE:</strong> I have found the project files and put the models up under the public domain at <a href="https://8bitprodigy.itch.io/public-domain-dungeon-themed-models">Itch.io</a>!</p>
 <hr />
-<h3 id="a-href-https-8bitprodigy-github-io-gameboy-color-dvd-screensaver-demo-a"><a href="#a-href-https-8bitprodigy-github-io-gameboy-color-dvd-screensaver-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://8bitprodigy.github.io/">GameBoy Color DVD Screensaver demo###</a></h3>
-<video controls>
-        <source src="videos/gb_dvd_screensaver.mp4" type="video/mp4" />
-</video>
-<p>This is a simple demo I made using GBDK to get familiar with the library. It features a DVD Video logo as a metasprite that bounces around the screen and changes color on collision.</p>
-<hr />
-<h3 id="a-href-https-codeberg-org-chris-deboy-gameboy-roguelike-gameboy-roguelike-a"><a href="#a-href-https-codeberg-org-chris-deboy-gameboy-roguelike-gameboy-roguelike-a" class="anchor" aria-hidden="true">🔗</a><a href="https://codeberg.org/chris_deboy/GameBoy_Roguelike">GameBoy Roguelike</a></h3>
-<video controls>
-        <source src="videos/gb_roguelike.mp4" type="video/mp4" />
-</video>
-<p>This is a work-in-progress roguelike I've been working on for the GameBoy in C and GBDK. It's pretty early on, but the basic skeleton of dungeon generation is implemented.</p>
-<hr />
 <h3 id="a-href-https-github-com-8bitprodigy-nrpnc-nrpnc-a"><a href="#a-href-https-github-com-8bitprodigy-nrpnc-nrpnc-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/nrpnc">NRPNC</a></h3>
 <p><img src="img/nrpnc.svg" alt="nrpnc.svg" /></p>
 <p><img src="img/nrpnc_screenshot.png" alt="nrpnc_screenshot.png" /></p>
@@ -226,6 +217,18 @@ In the meantime, the project has already been a valuable prototype, teaching me 
 <p>This is the Atlas Window Manager. AtlasWM aims to be a lightweight, but featureful, and user-friendly window manager for X11, based on Joe's Window Manager (JWM), that only uses permissively-licensed code and libraries, as it will be the default window manager for AcephalOS and eventually PrometheusOS.</p>
 <p>Currently, I've replaced Cairo/libRSVG with <a href="https://github.com/sammycage/plutosvg">PlutoSVG</a>, and have enhanced the customizability of the motif theme to enable greater readability, and am currently working on replacing Pango/XFT with <a href="https://github.com/tomolt/libschrift">libSchrift</a>. I intend to extend its features, with some of the main ones being tababble windows, like in Haiku or FluxBox, and a global menu panel item.</p>
 <p>AtlasWM is currently in alpha stages, and most planned features are not yet implemented. Many things are likely subject to change, so it is not recommended for daily use.</p>
+<hr />
+<h3 id="a-href-https-8bitprodigy-github-io-gameboy-color-dvd-screensaver-demo-a"><a href="#a-href-https-8bitprodigy-github-io-gameboy-color-dvd-screensaver-demo-a" class="anchor" aria-hidden="true">🔗</a><a href="https://8bitprodigy.github.io/">GameBoy Color DVD Screensaver demo###</a></h3>
+<video controls>
+        <source src="videos/gb_dvd_screensaver.mp4" type="video/mp4" />
+</video>
+<p>This is a simple demo I made using GBDK to get familiar with the library. It features a DVD Video logo as a metasprite that bounces around the screen and changes color on collision.</p>
+<hr />
+<h3 id="a-href-https-codeberg-org-chris-deboy-gameboy-roguelike-gameboy-roguelike-a"><a href="#a-href-https-codeberg-org-chris-deboy-gameboy-roguelike-gameboy-roguelike-a" class="anchor" aria-hidden="true">🔗</a><a href="https://codeberg.org/chris_deboy/GameBoy_Roguelike">GameBoy Roguelike</a></h3>
+<video controls>
+        <source src="videos/gb_roguelike.mp4" type="video/mp4" />
+</video>
+<p>This is a work-in-progress roguelike I've been working on for the GameBoy in C and GBDK. It's pretty early on, but the basic skeleton of dungeon generation is implemented.</p>
 <hr />
 <h2 id="3d-art-amp-animation"><a href="#3d-art-amp-animation" class="anchor" aria-hidden="true">🔗</a>3D Art &amp; Animation</h2>
 <p>Some 3D models I've worked on, some of which are animated. This is an incomplete list.</p>
